--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.output.ansi.enabled=ALWAYS
 
 #DATABASE CONFIG
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs?createDatabaseIfNotExists=true
+#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs
 spring.datasource.username=postgres
 spring.datasource.password=159357
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+
 
 server.error.include-exception=true
 
