--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.output.ansi.enabled=ALWAYS
 
 #DATABASE CONFIG
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -9,3 +10,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.error.include-exception=true
+spring.profiles.active=dev
