--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,24 @@
 spring.output.ansi.enabled=ALWAYS
 
-#DATABASE CONFIG
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+#POSTGRES CONFIG
+# spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs
+# spring.datasource.username=postgres
+# spring.datasource.password=159357
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.generate-ddl=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.show-sql=true
+# server.error.include-exception=true
+# spring.profiles.active=dev
+
+
+#MYSQL CONFIG
+spring.datasource.url=jdbc:mysql://localhost:3306/manutencaolabs
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 server.error.include-exception=true
 spring.profiles.active=dev
