--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,12 +13,23 @@ spring.output.ansi.enabled=ALWAYS
 
 
 #MYSQL CONFIG
-spring.datasource.url=jdbc:mysql://localhost:3306/manutencaolabs
-spring.datasource.username=root
-spring.datasource.password=root
+# spring.datasource.url=jdbc:mysql://localhost:3306/manutencaolabs
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.generate-ddl=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.show-sql=true
+# server.error.include-exception=true
+# spring.profiles.active=dev
+
+#DEPLOY RENDER POSTGRES CONFIG
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.error.include-exception=true
 spring.profiles.active=dev
