utilizando hash na senha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,6 @@ spring.jpa.show-sql=true
 server.error.include-exception=true
 spring.profiles.active=dev
 
-
+#ALTERAÇÕES FEITAS FOI NA MODEL RECLAMACAO(REFAZER METODOS GET/SET E CONTRUCTORS ALL FIELDS)
+#TAMBÉM NA SERVICE NO METODO CREATE E UPDATE
+#E NA CONTROLLER
