api finalizada com campo imagem unico dentro de tabela reclamacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.output.ansi.enabled=ALWAYS
 
 
 #MYSQL CONFIG
-# spring.datasource.url=jdbc:mysql://localhost:3306/manutencaolabs
+# spring.datasource.url=jdbc:mysql://localhost:3306/manutencaolabs3
 # spring.datasource.username=root
 # spring.datasource.password=root
 # spring.jpa.hibernate.ddl-auto=update
@@ -33,7 +33,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.error.include-exception=true
 spring.profiles.active=dev
-
-#ALTERAÇÕES FEITAS FOI NA MODEL RECLAMACAO(REFAZER METODOS GET/SET E CONTRUCTORS ALL FIELDS)
-#TAMBÉM NA SERVICE NO METODO CREATE E UPDATE
-#E NA CONTROLLER
