--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.output.ansi.enabled=ALWAYS
 
 #POSTGRES CONFIG
-# spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs2
+# spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs
 # spring.datasource.username=postgres
 # spring.datasource.password=159357
 # spring.jpa.hibernate.ddl-auto=update
