--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.output.ansi.enabled=ALWAYS
 
 #POSTGRES CONFIG
-spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs
-spring.datasource.username=postgres
-spring.datasource.password=159357
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-server.error.include-exception=true
-spring.profiles.active=dev
+# spring.datasource.url=jdbc:postgresql://localhost:5432/manutencaolabs
+# spring.datasource.username=postgres
+# spring.datasource.password=159357
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.generate-ddl=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.show-sql=true
+# server.error.include-exception=true
+# spring.profiles.active=dev
 
 
 #MYSQL CONFIG
@@ -24,12 +24,12 @@ spring.profiles.active=dev
 # spring.profiles.active=dev
 
 #DEPLOY RENDER POSTGRES CONFIG
-# spring.datasource.url=${DATABASE_URL}
-# spring.datasource.username=${DATABASE_USERNAME}
-# spring.datasource.password=${DATABASE_PASSWORD}
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.generate-ddl=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.show-sql=true
-# server.error.include-exception=true
-# spring.profiles.active=dev
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+server.error.include-exception=true
+spring.profiles.active=dev
