--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.error.include-exception=true
 spring.profiles.active=dev
+
+
+#HOSTGATOR CONFIG
+# spring.datasource.url=jdbc:mysql://br978.hostgator.com.br:3306/somos411_manutencaolabs
+# spring.datasource.username=somos411_admin
+# spring.datasource.password=@G4b11416#
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.generate-ddl=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.show-sql=true
+# server.error.include-exception=true
+# spring.profiles.active=dev
